# superkbd

./: .gitignore  CHANGELOG.md  CLAUDE.md  TESTING.md  bun.lockb  package.json  vitest.config.ts
.cargo/: config.toml
.github/: SETUP.md  WORKFLOW.md
.github/workflows/: build-test.yml  build.yml  release.yml  test.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  paste.rs
src-tauri/src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/src/clipboard/: mod.rs  monitor.rs  types.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/window/: manager.rs
src/lib/components/: HistoryItem.svelte  HistoryList.svelte  PermissionDialog.svelte  SearchInput.svelte  SearchInput.test.ts
src/lib/stores/: clipboard.ts
src/routes/: +page.svelte
src/test/: setup.ts
